Agregada validacion para solo letras en nombres

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
-    --color-primary: #4B69FD;
+    --color-primary: #40850f;
     --color-secondary: #FFF9EB;
     --color-tertiary: #C4C4C4;
     --color-button: #fe652b;
     --color-button-hover: #e55720;
-    --color-text: #444444;
+    --color-text: #2d2b2b;
     --color-white: #FFFFFF;
 }
 
@@ -109,7 +109,7 @@ button {
     padding: 15px 30px;
     font-family: "Inter", sans-serif;
     font-size: 16px;
-    border: 2px solid #000;
+    border: 1px solid #000;
     border-radius: 25px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     cursor: pointer;
@@ -140,6 +140,7 @@ ul {
     font-size: 40px;
     font-weight: bold;
     text-align: center;
+    flex-direction: row;
 }
 
 /* Botón de sortear título */
